# simple-reversi-python

./: README.md  action_selector.py  board.py  board.pyx  evaluator.py  evaluator.pyx  game.py  gui.py  main.py  mcs.py  minimax.py  minimax_thread.py  player.py  pyproject.toml  setup.py  stone.py  stone.pyx
